--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://dev-rohan72542.github.io/Weather-APP",
   "name": "weather-fether",
   "private": true,
   "version": "0.0.0",
